<resources>
    <string name="app_name">cargui</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">2022 © CARGUI </string>
    <string name="nav_header_subtitle">Todos los derechos reservados</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_imei">Imei</string>
    <string name="menu_driver">Driver</string>
</resources>